Remove warning logs